# opendcdiag

./: meson-cross-arm64.ini  meson.build
docs/: ARM64_PORTING_PLAN.md  ARM64_PORTING_SUMMARY.md
framework/device/cpu/: meson.build
framework/device/cpu/arm64/: arm64_cpu_device.h  arm64_cpuid.h  arm64_privilege.h  arm64_ras.h  arm64_sdc_detect.cpp  arm64_topology.cpp  kunpeng920_ecc.cpp  meson.build  neon_vectors.h
tests/cpu/: meson.build
tests/cpu/arm64/: crypto_test.cpp  meson.build  neon_test.cpp  sdc_test.cpp
